syntax = "proto3";

option csharp_namespace = "Roleplay.Grpc";

package roleplay;

message GetCharacterRequest { string character_id = 1; }
message InventoryItem { string id = 1; string name = 2; int32 quantity = 3; }
message GetCharacterResponse {
  string id = 1;
  string name = 2;
  int32 level = 3;
  repeated InventoryItem inventory = 4;
  int32 credits = 5;
}

message GetRoleRequest { int32 character_id = 1; }
message GetRoleResponse { int32 role_id = 1; }

message GetCurrencyRequest { int32 character_id = 1; }
message GetCurrencyResponse { int32 amount = 1; }

message AddItemToInventoryRequest { int32 character_id = 1; int32 item_id = 2; }
message CharacterInventoryAddResponse { bool success = 1; string message = 2; }

service RoleplayService {
  rpc GetCharacter(GetCharacterRequest) returns (GetCharacterResponse);
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse);
  rpc GetCurrency(GetCurrencyRequest) returns (GetCurrencyResponse);
  rpc AddItemToInventory(AddItemToInventoryRequest) returns (CharacterInventoryAddResponse);
}